feat(4ps): update, fix bug

--- a/libs/mix-share/src/modules/database/database-detail/database-detail.component.html
+++ b/libs/mix-share/src/modules/database/database-detail/database-detail.component.html
@@ -47,19 +47,19 @@
           <nav [(activeItemIndex)]="activeTabIndex"
                tuiTabs>
             <button tuiTab>
-              <span class="mix-icon"> feed </span> General
+              <span class="mix-icon mr-2"> feed </span> General
             </button>
             <button tuiTab>
-              <span class="mix-icon"> settings </span> Columns
+              <span class="mix-icon mr-2"> settings </span> Columns
             </button>
             <button tuiTab>
-              <span class="mix-icon"> share </span> Relationships
+              <span class="mix-icon mr-2"> share </span> Relationships
             </button>
             <button tuiTab>
-              <span class="mix-icon"> key </span> Permissions
+              <span class="mix-icon mr-2"> key </span> Permissions
             </button>
             <button tuiTab>
-              <span class="mix-icon"> rule_settings </span> Migrations
+              <span class="mix-icon mr-2"> rule_settings </span> Migrations
             </button>
           </nav>
         </div>
