feat(4ps): change to use signal

--- a/libs/mix-share/src/modules/database/database-data/database-data.component.html
+++ b/libs/mix-share/src/modules/database/database-data/database-data.component.html
@@ -116,7 +116,7 @@
                              [components]="components"
                              [context]="context"
                              [defaultColDef]="defaultColDef"
-                             [rowData]="rowData$ | async"
+                             [rowData]="data()"
                              [rowDragManaged]="true"
                              [rowSelection]="'multiple'"
                              [suppressMoveWhenRowDragging]="true"
