feat(4ps): update to user module

--- a/libs/mix-share/src/components/main-toolbar/user-navigation/user-navigation.component.html
+++ b/libs/mix-share/src/components/main-toolbar/user-navigation/user-navigation.component.html
@@ -18,7 +18,7 @@
              let-hide>
   <div class="flex w-full p-3 gap-3 pt-0 items-center justify-content-start">
     <mix-user-avatar *ngIf="userInfo"
-                     [size]="'xl'"
+                     [size]="'l'"
                      [userInfo]="userInfo"></mix-user-avatar>
 
     <div>
