--- a/libs/mix-ui/src/input/input.component.html
+++ b/libs/mix-ui/src/input/input.component.html
@@ -1,4 +1,5 @@
-<input class="input-primary"
+<input #input
+       class="input-primary"
        [autocomplete]="autocomplete"
        [formControl]="control"
        [id]="id"
