feat(4ps): add create roles

--- a/libs/mix-share/src/modules/account/roles/roles.component.html
+++ b/libs/mix-share/src/modules/account/roles/roles.component.html
@@ -48,6 +48,7 @@
     <div class="mix-dialog__content">
       <mix-input [formControl]="roleName"
                  [mixAutoFocus]="true"
+                 (keyup.enter)="createRoles()"
                  placeHolder="Type your role name"></mix-input>
     </div>
 
