--- a/libs/mix-share/src/modules/account/components/create-user-dialog/create-user-dialog.component.html
+++ b/libs/mix-share/src/modules/account/components/create-user-dialog/create-user-dialog.component.html
@@ -5,8 +5,9 @@
   </div>
 
   <div class="mix-dialog__content">
-    <label class="content-label mt-4">Email</label>
-    <mix-input formControlName="email"
+    <label class="content-label mt-1">Email</label>
+    <mix-input [mixAutoFocus]="true"
+               formControlName="email"
                placeHolder="Type email"></mix-input>
     <mix-form-error formControlName="email"></mix-form-error>
 
@@ -42,7 +43,8 @@
   </div>
 
   <div class="mix-dialog__footer">
-    <mix-button type="outline"
+    <mix-button class="mr-auto"
+                type="outline"
                 [loading]="loadingState() === 'Loading'"
                 (click)="dialogRef.close()">Cancel</mix-button>
     <mix-button [loading]="loadingState() === 'Loading'"
