--- a/libs/share-styles/src/styles/material-symbol.scss
+++ b/libs/share-styles/src/styles/material-symbol.scss
@@ -1,18 +1,3 @@
-/* fallback */
-@font-face {
-  font-family: 'Material Symbols Outlined';
-  font-style: normal;
-  font-weight: 400;
-  src: url('./fonts/mat-symbol-400.woff2') format('woff2');
-}
-
-@font-face {
-  font-family: 'Material Symbols Outlined';
-  font-style: normal;
-  font-weight: 200;
-  src: url('./fonts/mat-symbol-200.woff2') format('woff2');
-}
-
 .material-symbols-outlined {
   font-family: 'Material Symbols Outlined';
   font-weight: normal;
@@ -43,4 +28,5 @@
   direction: ltr;
   -webkit-font-feature-settings: 'liga';
   -webkit-font-smoothing: antialiased;
+  font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24;
 }
