--- a/libs/mix-share/src/modules/account/users/users.component.html
+++ b/libs/mix-share/src/modules/account/users/users.component.html
@@ -69,3 +69,15 @@
     </div>
   </div>
 </div>
+
+<ng-template #breadcrumb>
+  <mix-breadcrumbs>
+    <div name="Home"
+         icon="home"
+         url="/"
+         mixBreadcrumbItem></div>
+
+    <div name="Users"
+         mixBreadcrumbItem></div>
+  </mix-breadcrumbs>
+</ng-template>
