--- a/apps/mix-database/src/app/pages/portal/dashboard/dashboard.component.html
+++ b/apps/mix-database/src/app/pages/portal/dashboard/dashboard.component.html
@@ -73,3 +73,12 @@
     </div>
   </div>
 </div>
+
+
+<ng-template #breadcrumb>
+  <mix-breadcrumbs>
+    <div name="Home"
+         icon="home"
+         mixBreadcrumbItem></div>
+  </mix-breadcrumbs>
+</ng-template>
