--- a/libs/share-styles/src/styles/material-symbol.scss
+++ b/libs/share-styles/src/styles/material-symbol.scss
@@ -29,4 +29,8 @@
   -webkit-font-feature-settings: 'liga';
   -webkit-font-smoothing: antialiased;
   font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24;
+
+  &.--fill {
+    font-variation-settings: 'FILL' 1;
+  }
 }
