feat(4ps): add create job

--- a/libs/mix-share/src/modules/scheduler/components/job-form/job-form.component.html
+++ b/libs/mix-share/src/modules/scheduler/components/job-form/job-form.component.html
@@ -7,13 +7,13 @@
   <div class="mix-dialog__content">
     <div class="grid grid-cols-2 gap-3 w-full">
       <div class="col-span-1">
-        <div class="mb-1 content-label">Job Name</div>
-        <mix-input formControlName="jobName"></mix-input>
+        <div class="mb-1 content-label">Name</div>
+        <mix-input formControlName="name"></mix-input>
       </div>
 
       <div class="col-span-1">
-        <div class="mb-1 content-label">Group</div>
-        <mix-input formControlName="groupName"></mix-input>
+        <div class="mb-1 content-label">Description</div>
+        <mix-input formControlName="description"></mix-input>
       </div>
 
       <div class="col-span-1">
@@ -22,8 +22,8 @@
       </div>
 
       <div class="col-span-1">
-        <div class="mb-1 content-label">Interval</div>
-        <mix-input-number formControlName="interval"></mix-input-number>
+        <!-- <div class="mb-1 content-label">Interval</div>
+        <mix-input-number formControlName="interval"></mix-input-number> -->
       </div>
 
       <div class="col-span-1">
