--- a/libs/mix-share/src/modules/scheduler/schedulers/schedulers.component.html
+++ b/libs/mix-share/src/modules/scheduler/schedulers/schedulers.component.html
@@ -31,19 +31,19 @@
             <tr>
               <th class="px-6 py-3"
                   scope="col">
-                Jobs name
+                Job name
               </th>
               <th class="px-6 py-3"
                   scope="col">
-                Color
+                Job Type
               </th>
               <th class="px-6 py-3"
                   scope="col">
-                Category
+                Start At
               </th>
               <th class="px-6 py-3"
                   scope="col">
-                Price
+                End At
               </th>
               <th class="px-6 py-3"
                   scope="col">
@@ -52,99 +52,20 @@
             </tr>
           </thead>
           <tbody>
-            <tr class="odd:bg-white odd:dark:bg-gray-900 even:bg-gray-50 even:dark:bg-gray-800 border-b dark:border-gray-700">
+            <tr *ngFor="let job of state.data"
+                class="odd:bg-white odd:dark:bg-gray-900 even:bg-gray-50 even:dark:bg-gray-800 border-b dark:border-gray-700">
               <th class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white"
                   scope="row">
-                Apple MacBook Pro 17"
+                {{ job.name }}
               </th>
               <td class="px-6 py-4">
-                Silver
+                {{ job.jobName }}
               </td>
               <td class="px-6 py-4">
-                Laptop
               </td>
               <td class="px-6 py-4">
-                $2999
               </td>
               <td class="px-6 py-4">
-                <a class="font-medium text-blue-600 dark:text-blue-500 hover:underline"
-                   href="#">Edit</a>
-              </td>
-            </tr>
-            <tr class="odd:bg-white odd:dark:bg-gray-900 even:bg-gray-50 even:dark:bg-gray-800 border-b dark:border-gray-700">
-              <th class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white"
-                  scope="row">
-                Microsoft Surface Pro
-              </th>
-              <td class="px-6 py-4">
-                White
-              </td>
-              <td class="px-6 py-4">
-                Laptop PC
-              </td>
-              <td class="px-6 py-4">
-                $1999
-              </td>
-              <td class="px-6 py-4">
-                <a class="font-medium text-blue-600 dark:text-blue-500 hover:underline"
-                   href="#">Edit</a>
-              </td>
-            </tr>
-            <tr class="odd:bg-white odd:dark:bg-gray-900 even:bg-gray-50 even:dark:bg-gray-800 border-b dark:border-gray-700">
-              <th class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white"
-                  scope="row">
-                Magic Mouse 2
-              </th>
-              <td class="px-6 py-4">
-                Black
-              </td>
-              <td class="px-6 py-4">
-                Accessories
-              </td>
-              <td class="px-6 py-4">
-                $99
-              </td>
-              <td class="px-6 py-4">
-                <a class="font-medium text-blue-600 dark:text-blue-500 hover:underline"
-                   href="#">Edit</a>
-              </td>
-            </tr>
-            <tr class="odd:bg-white odd:dark:bg-gray-900 even:bg-gray-50 even:dark:bg-gray-800 border-b dark:border-gray-700">
-              <th class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white"
-                  scope="row">
-                Google Pixel Phone
-              </th>
-              <td class="px-6 py-4">
-                Gray
-              </td>
-              <td class="px-6 py-4">
-                Phone
-              </td>
-              <td class="px-6 py-4">
-                $799
-              </td>
-              <td class="px-6 py-4">
-                <a class="font-medium text-blue-600 dark:text-blue-500 hover:underline"
-                   href="#">Edit</a>
-              </td>
-            </tr>
-            <tr>
-              <th class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white"
-                  scope="row">
-                Apple Watch 5
-              </th>
-              <td class="px-6 py-4">
-                Red
-              </td>
-              <td class="px-6 py-4">
-                Wearables
-              </td>
-              <td class="px-6 py-4">
-                $999
-              </td>
-              <td class="px-6 py-4">
-                <a class="font-medium text-blue-600 dark:text-blue-500 hover:underline"
-                   href="#">Edit</a>
               </td>
             </tr>
           </tbody>
