--- a/libs/mix-share/src/modules/scheduler/schedulers/schedulers.component.html
+++ b/libs/mix-share/src/modules/scheduler/schedulers/schedulers.component.html
@@ -25,7 +25,7 @@
 
     <div *ngIf="store.vm$ | async as state"
          class="data-table-page__body">
-      <div class="relative overflow-x-auto shadow-md sm:rounded-lg mt-5">
+      <div class="relative overflow-x-auto sm:rounded-lg mt-5">
         <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
           <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
             <tr>
