feat(4ps): update create job template ui

--- a/libs/mix-share/src/components/user-profile-dialof/user-profile-dialof.component.html
+++ b/libs/mix-share/src/components/user-profile-dialof/user-profile-dialof.component.html
@@ -1,50 +1,48 @@
 <div class="mix-dialog h-full">
   <div class="container-fluid h-full">
     <div class="grid grid-cols-12 gap-4 h-full">
-      <div class="col-span-2 border-right"
+      <div class="col-span-3 border-right"
            style="background-color: #071a2b; color: #fff">
         <div class="flex flex-col items-center text-center p-3 py-5">
-          <img class="rounded-circle mt-5"
-               src="https://st3.depositphotos.com/15648834/17930/v/600/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg"
-               width="150px"
-               height="150px">
+          <img class="rounded-full mt-5 min-w-40 min-h-40 max-w-40 max-h-40"
+               src="https://st3.depositphotos.com/15648834/17930/v/600/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg">
           <span class="font-weight-bold text-l mt-2">Mr. User Name</span>
         </div>
       </div>
 
-      <div class="col-span-6 p-4 pb-2 border-right">
+      <div class="col-span-5 p-4 pb-2 border-right">
         <div class="p-3 flex flex-col h-full">
           <div class="flex justify-content-between items-center mb-3">
-            <h4 class="text-right">Profile Settings</h4>
+            <h4 class="text-right text-xl font-medium">Profile Settings</h4>
           </div>
           <div class="grid grid-cols-12 gap-4 mt-2">
             <div class="col-span-6">
-              <label class="text-sub text-500 mb-1">Name</label>
+              <label class="text-sub text-500 mb-2">Name</label>
               <mix-input placeHolder="first name"></mix-input>
             </div>
             <div class="col-span-6">
-              <label class="text-sub text-500 mb-1">Surname</label>
+              <label class="text-sub text-500 mb-2">Surname</label>
               <mix-input placeHolder="sur name"></mix-input>
             </div>
-            <div class="col-span-12 mt-3">
-              <label class="text-sub text-500 mb-1">Mobile Number</label>
+            <div class="col-span-12 mt-1">
+              <label class="text-sub text-500 mb-2">Mobile Number</label>
               <mix-input placeHolder="enter phone number"></mix-input>
             </div>
-            <div class="col-span-12 mt-3">
-              <label class="text-sub text-500 mb-1">Email ID</label>
+            <div class="col-span-12 mt-1">
+              <label class="text-sub text-500 mb-2">Email ID</label>
               <mix-input placeHolder="enter email id"></mix-input>
             </div>
-            <div class="col-span-12 mt-3">
-              <label class="text-sub text-500 mb-1">Education</label>
+            <div class="col-span-12 mt-1">
+              <label class="text-sub text-500 mb-2">Education</label>
               <mix-input placeHolder="education"></mix-input>
             </div>
-            <div class="col-span-6 mt-3">
-              <label class="text-sub text-500 mb-1">Country</label>
+            <div class="col-span-6 mt-1">
+              <label class="text-sub text-500 mb-2">Country</label>
               <mix-input placeHolder="country"
                          value> </mix-input>
             </div>
-            <div class="col-span-6 mt-3">
-              <label class="text-sub text-500 mb-1">State/Region</label>
+            <div class="col-span-6 mt-1">
+              <label class="text-sub text-500 mb-2">State/Region</label>
               <mix-input placeHolder="state"
                          value> </mix-input>
             </div>
@@ -62,12 +60,12 @@
       <div class="col-span-4 p-4">
         <div class="p-3 pt-5">
           <div class="col-span-12">
-            <label class="text-sub text-500 mb-1">Experience in Designing</label>
+            <label class="text-sub text-500 mb-2">Experience in Designing</label>
             <mix-input placeHolder="experience"> </mix-input>
           </div>
           <br>
           <div class="col-span-12">
-            <label class="text-sub text-500 mb-1">Additional Details</label>
+            <label class="text-sub text-500 mb-2">Additional Details</label>
             <mix-input placeHolder="additional details"> </mix-input>
           </div>
         </div>
