--- a/libs/mix-share/src/modules/scheduler/components/job-form/job-form.component.html
+++ b/libs/mix-share/src/modules/scheduler/components/job-form/job-form.component.html
@@ -1,45 +1,56 @@
 <div class="mix-dialog --default-padding"
      [formGroup]="jobForm">
   <div class="mix-dialog__header">
-    Add New Job
+    {{ mode() === 'Create' ? 'Create New Job' : 'Edit Job'}}
   </div>
 
   <div class="mix-dialog__content">
-    <div class="grid grid-cols-2 gap-3 w-full">
-      <div class="col-span-1">
-        <div class="mb-1 content-label">Name</div>
+    <div class="grid grid-cols-6 gap-3 w-full">
+      <div class="col-span-3">
+        <div class="mb-1 text-sub">Name</div>
         <mix-input formControlName="name"></mix-input>
       </div>
 
-      <div class="col-span-1">
-        <div class="mb-1 content-label">Description</div>
+      <div class="col-span-3">
+        <div class="mb-1 text-sub">Description</div>
         <mix-input formControlName="description"></mix-input>
       </div>
 
-      <div class="col-span-1">
-        <div class="mb-1 content-label">Repeat</div>
+      <div class="col-span-3">
+        <div class="mb-1 text-sub">Job</div>
+        <mix-select [items]="jobNameOptions"
+                    [labelProcess]="jobNameStringify"
+                    formControlName="jobName"></mix-select>
+      </div>
+
+      <div class="col-span-6 mt-3">
+        <div class="mb-2 content-label text-xl">Schedule Setting</div>
+        <div class="mb-1 text-sub">Running on</div>
+        <mix-input-cron [cron]="jobForm.value.cronExpression ?? ''"
+                        (cronChange)="jobForm.controls.cronExpression.patchValue($event)"></mix-input-cron>
+      </div>
+
+
+      <div class="col-span-2">
+        <div class="mb-1 text-sub">Repeat Time</div>
         <mix-input-number formControlName="repeatCount"></mix-input-number>
       </div>
 
-      <div class="col-span-1">
-        <!-- <div class="mb-1 content-label">Interval</div>
-        <mix-input-number formControlName="interval"></mix-input-number> -->
-      </div>
 
-      <div class="col-span-1">
-        <div class="mb-1 content-label">Start At</div>
+      <div class="col-span-2">
+        <div class="mb-1 text-sub">Start At</div>
         <mix-date-time-picker formControlName="startAt"></mix-date-time-picker>
       </div>
 
-      <div class="col-span-1">
-        <div class="mb-1 content-label">End At</div>
+      <div class="col-span-2">
+        <div class="mb-1 text-sub">End At</div>
         <mix-date-time-picker formControlName="endAt"></mix-date-time-picker>
       </div>
 
-      <div class="col-span-2 mt-2">
-        <div class="mb-1 content-label">Setting Schedule</div>
-        <mix-input-cron [cron]="jobForm.value.cronExpression ?? ''"
-                        (cronChange)="jobForm.controls.cronExpression.patchValue($event)"></mix-input-cron>
+      <div class="col-span-6 mt-3">
+        <div class="mb-2 content-label text-xl">Data to be send:</div>
+        <div class="mb-1 text-sub">Edit as json object</div>
+        <mix-json-editor formControlName="data"></mix-json-editor>
       </div>
     </div>
   </div>
@@ -48,8 +59,8 @@
     <mix-button class="mr-auto"
                 type="outline"
                 (click)="ref.close()">Close</mix-button>
-    <div class="flex items-center mr-2"><mix-toggle formControlName="isStartNow"></mix-toggle>Run now</div>
+    <div class="flex items-center mr-2"><mix-toggle formControlName="isStartNow"></mix-toggle>Run immediately</div>
     <mix-button [loading]="loadingState() === 'Loading'"
-                (click)="submit()">Create Job</mix-button>
+                (click)="submit()"> {{ mode() === 'Create' ? 'Create Job' : 'Edit Job'}} </mix-button>
   </div>
 </div>
