--- a/libs/mix-ui/src/json-editor/json-editor.component.scss
+++ b/libs/mix-ui/src/json-editor/json-editor.component.scss
@@ -21,3 +21,7 @@
 div.jsoneditor-tree {
   border-radius: var(--element-rounded) !important;
 }
+
+.jsoneditor-field {
+  white-space: nowrap !important;
+}
