--- a/libs/mix-share/src/modules/database/components/database-select/database-select.component.scss
+++ b/libs/mix-share/src/modules/database/components/database-select/database-select.component.scss
@@ -3,8 +3,7 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  box-shadow: -25px 5px 25px -40px #00000080 inset;
-  border: 1px solid var(--border-color-default);
+  border-right: 1px solid var(--border-color-default);
 
   &__top {
     padding: 1rem 1rem 0 1rem;
