--- a/libs/mix-ui/src/breadcrumbs/breadcrumbs.component.html
+++ b/libs/mix-ui/src/breadcrumbs/breadcrumbs.component.html
@@ -1,11 +1,10 @@
 <nav class="flex"
      aria-label="Breadcrumb">
   <ol class="inline-flex items-center space-x-1 md:space-x-2 rtl:space-x-reverse">
-    @for (item of displayItems(); track item; let idx = $index) {
-    <li class="inline-flex items-center">
+    @for (item of displayItems(); track item; let idx = $index, last = $last) {
+    <li class="hidden lg:inline-flex items-center">
       <svg *ngIf="idx > 0"
            class="rtl:rotate-180 w-3 h-3 text-gray-400 mx-1"
-           aria-hidden="true"
            xmlns="http://www.w3.org/2000/svg"
            fill="none"
            viewBox="0 0 6 10">
