--- a/libs/share-styles/src/styles/dialog.scss
+++ b/libs/share-styles/src/styles/dialog.scss
@@ -104,3 +104,33 @@ ngneat-dialog {
     }
   }
 }
+
+@media only screen and (max-width: 890px) {
+  .ngneat-dialog-backdrop {
+    padding: 0px !important;
+
+    .ngneat-dialog-content {
+      width: 100vw !important;
+      min-width: 100vw !important;
+      max-width: 100vw !important;
+      height: 100vh !important;
+      min-height: 100vh !important;
+      --dialog-content-border-radius: 0px !important;
+
+      .mix-dialog {
+        display: flex;
+        flex-direction: column;
+        height: 100vh;
+        min-height: 100vh;
+
+        &__footer {
+          margin-top: auto;
+        }
+
+        &__content {
+          flex-grow: 1;
+        }
+      }
+    }
+  }
+}
